// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/ActivityIndicator prop "animating" is "false" 1`] = `
<View
  accessibilityRole="progressbar"
  aria-valuemax="1"
  aria-valuemin="0"
  style={
    Object {
      "alignItems": "center",
      "justifyContent": "center",
    }
  }
>
  <View
    style={
      Object {
        "animationDuration": "0.75s",
        "animationIterationCount": "infinite",
        "animationName": "rn-ActivityIndicator-animation",
        "animationPlayState": "paused",
        "animationTimingFunction": "linear",
        "height": 20,
        "visibility": "hidden",
        "width": 20,
      }
    }
  >
    <svg
      height="100%"
      viewBox="0 0 32 32"
      width="100%"
    >
      <circle
        cx="16"
        cy="16"
        fill="none"
        r="14"
        strokeWidth="4"
        style={
          Object {
            "opacity": 0.2,
            "stroke": "#1976D2",
          }
        }
      />
      <circle
        cx="16"
        cy="16"
        fill="none"
        r="14"
        strokeWidth="4"
        style={
          Object {
            "stroke": "#1976D2",
            "strokeDasharray": 80,
            "strokeDashoffset": 60,
          }
        }
      />
    </svg>
  </View>
</View>
`;

exports[`components/ActivityIndicator prop "animating" is "true" 1`] = `
<View
  accessibilityRole="progressbar"
  aria-valuemax="1"
  aria-valuemin="0"
  style={
    Object {
      "alignItems": "center",
      "justifyContent": "center",
    }
  }
>
  <View
    style={
      Object {
        "animationDuration": "0.75s",
        "animationIterationCount": "infinite",
        "animationName": "rn-ActivityIndicator-animation",
        "animationTimingFunction": "linear",
        "height": 20,
        "width": 20,
      }
    }
  >
    <svg
      height="100%"
      viewBox="0 0 32 32"
      width="100%"
    >
      <circle
        cx="16"
        cy="16"
        fill="none"
        r="14"
        strokeWidth="4"
        style={
          Object {
            "opacity": 0.2,
            "stroke": "#1976D2",
          }
        }
      />
      <circle
        cx="16"
        cy="16"
        fill="none"
        r="14"
        strokeWidth="4"
        style={
          Object {
            "stroke": "#1976D2",
            "strokeDasharray": 80,
            "strokeDashoffset": 60,
          }
        }
      />
    </svg>
  </View>
</View>
`;

exports[`components/ActivityIndicator prop "color" 1`] = `
<svg
  height="100%"
  viewBox="0 0 32 32"
  width="100%"
>
  <circle
    cx="16"
    cy="16"
    fill="none"
    r="14"
    strokeWidth="4"
    style={
      Object {
        "opacity": 0.2,
        "stroke": "red",
      }
    }
  />
  <circle
    cx="16"
    cy="16"
    fill="none"
    r="14"
    strokeWidth="4"
    style={
      Object {
        "stroke": "red",
        "strokeDasharray": 80,
        "strokeDashoffset": 60,
      }
    }
  />
</svg>
`;

exports[`components/ActivityIndicator prop "hidesWhenStopped" is "false" 1`] = `
<View
  accessibilityRole="progressbar"
  aria-valuemax="1"
  aria-valuemin="0"
  style={
    Object {
      "alignItems": "center",
      "justifyContent": "center",
    }
  }
>
  <View
    style={
      Object {
        "animationDuration": "0.75s",
        "animationIterationCount": "infinite",
        "animationName": "rn-ActivityIndicator-animation",
        "animationPlayState": "paused",
        "animationTimingFunction": "linear",
        "height": 20,
        "width": 20,
      }
    }
  >
    <svg
      height="100%"
      viewBox="0 0 32 32"
      width="100%"
    >
      <circle
        cx="16"
        cy="16"
        fill="none"
        r="14"
        strokeWidth="4"
        style={
          Object {
            "opacity": 0.2,
            "stroke": "#1976D2",
          }
        }
      />
      <circle
        cx="16"
        cy="16"
        fill="none"
        r="14"
        strokeWidth="4"
        style={
          Object {
            "stroke": "#1976D2",
            "strokeDasharray": 80,
            "strokeDashoffset": 60,
          }
        }
      />
    </svg>
  </View>
</View>
`;

exports[`components/ActivityIndicator prop "hidesWhenStopped" is "true" 1`] = `
<View
  accessibilityRole="progressbar"
  aria-valuemax="1"
  aria-valuemin="0"
  style={
    Object {
      "alignItems": "center",
      "justifyContent": "center",
    }
  }
>
  <View
    style={
      Object {
        "animationDuration": "0.75s",
        "animationIterationCount": "infinite",
        "animationName": "rn-ActivityIndicator-animation",
        "animationPlayState": "paused",
        "animationTimingFunction": "linear",
        "height": 20,
        "visibility": "hidden",
        "width": 20,
      }
    }
  >
    <svg
      height="100%"
      viewBox="0 0 32 32"
      width="100%"
    >
      <circle
        cx="16"
        cy="16"
        fill="none"
        r="14"
        strokeWidth="4"
        style={
          Object {
            "opacity": 0.2,
            "stroke": "#1976D2",
          }
        }
      />
      <circle
        cx="16"
        cy="16"
        fill="none"
        r="14"
        strokeWidth="4"
        style={
          Object {
            "stroke": "#1976D2",
            "strokeDasharray": 80,
            "strokeDashoffset": 60,
          }
        }
      />
    </svg>
  </View>
</View>
`;

exports[`components/ActivityIndicator prop "size" is "large" 1`] = `
<View
  accessibilityRole="progressbar"
  aria-valuemax="1"
  aria-valuemin="0"
  style={
    Object {
      "alignItems": "center",
      "justifyContent": "center",
    }
  }
>
  <View
    style={
      Object {
        "animationDuration": "0.75s",
        "animationIterationCount": "infinite",
        "animationName": "rn-ActivityIndicator-animation",
        "animationTimingFunction": "linear",
        "height": 36,
        "width": 36,
      }
    }
  >
    <svg
      height="100%"
      viewBox="0 0 32 32"
      width="100%"
    >
      <circle
        cx="16"
        cy="16"
        fill="none"
        r="14"
        strokeWidth="4"
        style={
          Object {
            "opacity": 0.2,
            "stroke": "#1976D2",
          }
        }
      />
      <circle
        cx="16"
        cy="16"
        fill="none"
        r="14"
        strokeWidth="4"
        style={
          Object {
            "stroke": "#1976D2",
            "strokeDasharray": 80,
            "strokeDashoffset": 60,
          }
        }
      />
    </svg>
  </View>
</View>
`;

exports[`components/ActivityIndicator prop "size" is a number 1`] = `
<View
  accessibilityRole="progressbar"
  aria-valuemax="1"
  aria-valuemin="0"
  style={
    Object {
      "alignItems": "center",
      "justifyContent": "center",
    }
  }
>
  <View
    style={
      Object {
        "animationDuration": "0.75s",
        "animationIterationCount": "infinite",
        "animationName": "rn-ActivityIndicator-animation",
        "animationTimingFunction": "linear",
        "height": 30,
        "width": 30,
      }
    }
  >
    <svg
      height="100%"
      viewBox="0 0 32 32"
      width="100%"
    >
      <circle
        cx="16"
        cy="16"
        fill="none"
        r="14"
        strokeWidth="4"
        style={
          Object {
            "opacity": 0.2,
            "stroke": "#1976D2",
          }
        }
      />
      <circle
        cx="16"
        cy="16"
        fill="none"
        r="14"
        strokeWidth="4"
        style={
          Object {
            "stroke": "#1976D2",
            "strokeDasharray": 80,
            "strokeDashoffset": 60,
          }
        }
      />
    </svg>
  </View>
</View>
`;
